# falcondale-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  test.ipynb  tox.ini
.github/workflows/: python-publish.yml
docs/: index.md  reference.md  requirements.txt
docs/examples/: Advanced example.ipynb  Clustering examples.ipynb  Feature selection options.ipynb
docs/gettingstarted/: Basic usage.ipynb  contribute.md  features.md  installation.md  support.md
docs/techniques/: clustering.md  datamanipulation.md  featureselection.md  models.md
falcodale/: __init__.py  main.py
falcondale/: __init__.py  classifiers.py  clustering.py  data.py  feature_selection.py  main.py  presentation.ipynb  solvers.py  utils.py
falcondale/helpers/: kernels.py  mutual_information.py  qnn.py  qsvc.py
notebooks/: presentation.ipynb  titanic_small.csv
tests/: test_main.py
