
[project]
name = "falcondale"
version = "0.1.0"
description = "Falconale SDK"
authors = [
    {name = "Stafford Computing LLC", email = "info@staffordcomputing.com"},
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.3",
    "interruptingcow>=0.8",
]
requires-python = ">=3.9,<4"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
notebook = [
    "ipykernel>=6.23.3",
]
