[project]
name = "falcondale"
version = "0.2.1"
description = "Falcondale SDK"
authors = [
    {name = "Stafford Computing LLC", email = "info@staffordcomputing.com"},
]
dependencies = [
    "pandas>=2.0.3",
    "ydata-profiling>=4.5.1",
    "scikit-learn>=1.3.0",
    "ipywidgets>=8.1.1",
    "torch>=2.0.1",
    "pennylane>=0.32.0",
    "qiskit>=0.44.1",
    "qiskit-machine-learning>=0.6.1",
    "qiskit-aer>=0.12.2",
    "dimod>=0.12.12",
    "dwave-neal>=0.6.0",
    "dwave-cloud-client>=0.10.6",
    "requests[socks]>=2.31.0",
    "qiskit-optimization>=0.5.0",
    "qiskit-algorithms>=0.2.1",
    "apqc>=0.1.3",
]
requires-python = ">=3.9,<3.12"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Homepage" = "https://github.com/stafford-computing/falcondale-sdk"
"Documentation" = "https://falcondale.readthedocs.io/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
notebook = [
    "ipykernel>=6.23.3",
]
documentation = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.3.1",
    "mkdocs-badges>=0.4.1",
    "mkdocstrings[crystal,python]>=0.23.0",
    "mkdocs-jupyter>=0.24.2",
]
